--- a/src/content/index.html
+++ b/src/content/index.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Site title</title>
-    <meta name="description" content="Description" />
+<html lang="pl">
 
-    <!-- Title -->
-    <meta property="og:title" content="" />
-    <!-- OPTIONAL description. 2-4 sentences. -->
-    <meta property="og:description" content="" />
-    <!-- full url with http(s) ie. https://maciejkorsan.github.io/my-repo/ -->
-    <meta property="og:url" content="" />
-    <!-- full url to the image with http(s) ie. https://maciejkorsan.github.io/my-repo/assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
-    <meta property="og:image" content="https://maciejkorsan.com/wtf-gulp-starter/assets/img/cover.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Hydrapp</title>
+  <meta name="description" content="Hydrapp" />
 
-    <link rel="manifest" href="manifest.json" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link
-      rel="apple-touch-icon"
-      sizes="192x192"
-      href="assets/pwa/icons/icon-192x192.png"
-    />
+  <!-- Title -->
+  <meta property="og:title" content="Hydrapp" />
+  <!-- OPTIONAL description. 2-4 sentences. -->
+  <meta property="og:description" content="Hydrapp" />
+  <!-- full url with http(s) ie. https://sienkiewicztomasz.github.io/hydrapp/ -->
+  <meta property="og:url" content="https://sienkiewicztomasz.github.io/hydrapp/" />
+  <!-- full url to the image with http(s) ie. https://sienkiewicztomasz.github.io/hydrapp//assets/img/fb.png. Facebook suggests at least 1200 x 630. -->
+  <meta property="og:image" content="https://sienkiewicztomasz.github.io/hydrapp/" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/pwa/icons/icon-192x192.png"
-    />
+  <link rel="manifest" href="manifest.json" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="apple-touch-icon" sizes="192x192" href="assets/pwa/icons/icon-192x192.png" />
 
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    <h1>Hello world - with simple PWA support!</h1>
+  <link rel="icon" type="image/png" href="assets/pwa/icons/icon-192x192.png" />
 
-    <script src="js/main.js"></script>
-  </body>
+  <link rel="stylesheet" href="css/main.css" />
+</head>
+
+<body class="body">
+  <main class="main">
+    <h1 class="heading">HydrAPP</h1>
+    <div class="counter">
+      <span class="counter__value counter__value--js">
+        8
+      </span>
+    </div>
+    <button class="button-add button-add--js">dodaj szklankę</button>
+    <button class="button-remove button-remove--js">usuń szklankę</button>
+  </main>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
